# notebook-llm-rf

./: .env.example  .gitignore  .streamlitignore  DEPLOYMENT.md  GEMINI.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: README.md
src/podcast/: script_generator.py  script_generator.py.tmp.62424.1768158368892  script_generator.py.tmp.62424.1768158379166  script_generator.py.tmp.62424.1768158395005  text_to_speech.py  text_to_speech.py.tmp.62424.1768158426724
